<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/main_item"
        android:title="@string/mail_subheader_title"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_family"
            android:icon="@drawable/ic_family"
            android:title="@string/menu_family" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_teammate"
            android:icon="@drawable/ic_teammate"
            android:title="@string/menu_teammate" />
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/ic_work"
            android:title="@string/menu_work" />
    </group>
</menu>