<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:layout_gravity="center"
        app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/contact_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            tools:srcCompat="@tools:sample/avatars[1]" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/contact_name_surname"
            style="@style/DetailEditTextStyle"
            android:hint="@string/your_name_hint"
            android:inputType="text"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/contact_phone"
            style="@style/DetailEditTextStyle"
            android:inputType="phone"
            android:hint="@string/your_phone_number_hint"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/contact_address"
            style="@style/DetailEditTextStyle"
            android:inputType="text"
            android:hint="@string/your_adress_hint"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/contact_mail"
            style="@style/DetailEditTextStyle"
            android:inputType="textEmailAddress"
            android:hint="@string/your_mail_adress_hint"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/contact_group"
            style="@style/DetailEditTextStyle"
            android:inputType="text"
            android:hint="@string/your_group_hint"
            />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/contact_group_spinner"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_margin="10dp"
            tools:text="Group spinner"
            />
        <Button
            android:id="@+id/btn_delete"
            android:text="@string/delete_contact"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_update"
            android:text="@string/update_contact"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_save"
            android:text="@string/save_changes_detail"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        />
    </androidx.cardview.widget.CardView>
</ScrollView>


