<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.create.CreateContactFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dropdown_menu"
        style="@style/AppTheme.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginEnd="16dp"
        android:hint="@string/select_a_contact_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/group_txtview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/name_edt_txt"
        style="@style/CreateContactEditTextStyle"
        android:hint="@string/your_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/dropdown_menu"
        app:layout_constraintStart_toStartOf="@+id/dropdown_menu"
        app:layout_constraintTop_toBottomOf="@+id/dropdown_menu" />

    <EditText
        android:id="@+id/surname_edt_txt"
        style="@style/CreateContactEditTextStyle"
        android:hint="@string/your_surname_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/name_edt_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name_edt_txt"
        app:layout_constraintTop_toBottomOf="@+id/name_edt_txt" />

    <EditText
        android:id="@+id/mail_edt_txt"
        style="@style/CreateContactEditTextStyle"
        android:hint="@string/your_mail_adress_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/name_edt_txt"
        app:layout_constraintStart_toStartOf="@+id/name_edt_txt"
        app:layout_constraintTop_toBottomOf="@+id/surname_edt_txt" />

    <EditText
        android:id="@+id/phone_edt_txt"
        style="@style/CreateContactEditTextStyle"
        android:hint="@string/your_phone_number_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/name_edt_txt"
        app:layout_constraintStart_toStartOf="@+id/name_edt_txt"
        app:layout_constraintTop_toBottomOf="@+id/mail_edt_txt" />

    <Button
        android:id="@+id/button_save"
        style="@style/CreateContactEditTextStyle"
        android:text="@string/save_new_contact_btn_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adress_edt_txt" />

    <EditText
        android:id="@+id/adress_edt_txt"
        style="@style/CreateContactEditTextStyle"
        android:hint="@string/your_adress_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/name_edt_txt"
        app:layout_constraintStart_toStartOf="@+id/name_edt_txt"
        app:layout_constraintTop_toBottomOf="@+id/phone_edt_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>